syntax = "proto3";
package resolver;
//./表示go 文件生成的路径 user表示包名
option go_package = "./pb";

message ResolverReq {
    string name=1;
    int32 age =2;
}

message ResolverResp {
    string reply = 1;
    string second_name=2;
}

service ResolverService {
    //方法
    rpc resolver(ResolverReq) returns(ResolverResp);
}